# funny

./: .env.example  .funny.json  .gitattributes  .gitignore  .lycheeignore  .mcp.json  .npmignore  .oxfmtrc.json  .oxlintrc.json  .plan  .secretlintrc.json  AGENTS.md  ARCHITECTURE_EVAL.md  CLAUDE.md  INSTALL.md  PLAN-orchestrator-standalone.md  PLAN-symphony-pipelines.md  PLAN-symphony.md  PLAN.md  PROCESS-CLEANUP.md  README.md  SECURITY_AUDIT_TASKS.md  TODO.md  cognitive-load.md  domain.yaml  funny-dev.kdl  graph.json  package-lock.json  package.json  plan-bugbot.md  plan.md  playwright.config.ts  railway.json  railway.runner.json  rock.toml
.claude/: settings.local.json
.fitness/: boundary-validation-baseline.txt  json-boundary-validation-baseline.txt  query-boundary-validation-baseline.txt  socket-boundary-validation-baseline.txt  typecheck-baseline.txt
.github/: dependabot.yml
.husky/: pre-commit
.rock/: rules.toml
.sentrux/: rules.toml
docker/: docker-compose.hatchet.yml
docs/: PROCESS-EXECUTION-STRATEGY.md  README.md  browser-panel-screenshot.md  index.md  ingest-api.md  obeservability_plan.md  pipeline-architecture.md  route-driven-threads-plan.md  security-regression-gap.md  visualizer-plugins.md
e2e/: TEST-PLAN.md  accessibility.spec.ts  add-project.spec.ts  all-threads.spec.ts  analytics.spec.ts  api-errors.spec.ts  app.spec.ts  auth.spec.ts  (+32 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: annotator.json  default.json
src-tauri/icons/: icon.icns
src-tauri/injected/: annotator.js
src-tauri/src/: lib.rs  main.rs  pty.rs
(+49 files in other folders)
