[package]
name = "funny"
version = "0.1.0"
description = "Parallel Claude Code agent orchestration with git worktrees"
authors = ["you"]
edition = "2021"

[lib]
name = "a_parallel_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
